--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,6 +56,17 @@ body {
     transition: var(--main-transition-time);
 }
 
+/* Hide scrollbars */
+body {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
 .transition {
     transition: var(--main-transition-time);
 }
