Implement structure of footer

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,7 @@
 @import url('darkmode-toggle.styles.css');
 @import url('about-me-section.styles.css');
 @import url('projects-section.styles.css');
+@import url('footer-section.styles.css');
 @import url('utils.styles.css');
 
 /*Open Sans*/
