--- a/styles/footer-section.styles.css
+++ b/styles/footer-section.styles.css
@@ -1,18 +1,3 @@
-:root {
-    --footer-social-icon-foreground-dark: var(--social-icon-foreground-light);
-    --footer-social-icon-foreground-light: var(--social-icon-foreground-dark);
-    --footer-social-icon-foreground: var(--footer-social-icon-foreground-light);
-
-    --footer-social-icon-background-dark: var(--social-icon-background-light);
-    --footer-social-icon-background-light: var(--social-icon-background-dark);
-    --footer-social-icon-background: var(--footer-social-icon-background-light);
-}
-
-body.darkmode {
-    --footer-social-icon-background: var(--footer-social-icon-background-dark);
-    --footer-social-icon-foreground: var(--footer-social-icon-foreground-dark);
-}
-
 .footer-section {
     height: 100vh;
     position: relative;
@@ -22,16 +7,55 @@ body.darkmode {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: absolute;
+    margin-bottom: 2rem;
+    left: 0;
+    bottom: 0;
 }
 
-.footer-content>h1 {
+.footer-content>h2 {
     margin: 0;
+    color: var(--primary-text-color-dark);
+    font-size: 3.65rem;
+    text-align: center;
+    margin-bottom: 1rem;
 }
+
+.footer-content>span {
+    margin: 0;
+    color: var(--secondary-text-color-dark);
+    font-size: 1.4rem;
+    margin-bottom: 1rem;
+}
+
+.contact-me-footer-btn {
+    --contact-btn-footer-font-size: 1.3rem;
+    --contact-btn-footer-vertical-padding: 0.75rem;
+    --contact-btn-footer-height: calc(var(--contact-btn-footer-font-size) + 2*var(--contact-btn-footer-vertical-padding));
+
+    font-size: var(--contact-btn-footer-font-size);
+    padding: var(--contact-btn-footer-vertical-padding) 3rem;
+    border-radius: calc(0.5*var(--contact-btn-footer-height));
+
+    color: white;
+    background: linear-gradient(to right, var(--orange-light), var(--orange-dark));
+    border: none;
+    margin-bottom: 1rem;
+}
+
 
 .footer-social-icons-wrapper {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: .5rem;
+}
+
+.footer-content .social-icon-wrapper {
+    background-color: var(--social-icon-background-dark);
+}
+
+.footer-content .social-icon {
+    fill: var(--social-icon-foreground-dark);
 }
 
 .footer-background-text {
