--- a/styles/footer-section.styles.css
+++ b/styles/footer-section.styles.css
@@ -1,6 +1,7 @@
 .footer-section {
     height: 100vh;
     position: relative;
+    overflow: hidden;
 }
 
 .footer-content {
@@ -11,6 +12,7 @@
     margin-bottom: 2rem;
     left: 0;
     bottom: 0;
+    z-index: 1;
 }
 
 .footer-content>h2 {
@@ -63,8 +65,9 @@
 }
 
 .footer-background {
-    display: none;
-    /*todo: remove*/
+    position: absolute;
+    bottom: -150px;
+    transform: scale(0.6) translateX(-1250px);
 }
 
 .footer-background>path {
