--- a/styles/footer-section.styles.css
+++ b/styles/footer-section.styles.css
@@ -1,16 +1,17 @@
 .footer-section {
     height: 100vh;
-    position: relative;
     overflow: hidden;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
 }
 
 .footer-content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: absolute;
+    position: relative;
     margin-bottom: 2rem;
-    left: 0;
     bottom: 0;
     z-index: 1;
 }
@@ -62,10 +63,30 @@
 
 .footer-background {
     position: absolute;
-    bottom: -150px;
-    transform: scale(0.6) translateX(-1250px);
+    bottom: -180px;
+    transform: scale(0.6) translateX(+50px);
+    z-index: -1;
 }
 
 .footer-background>path {
     fill: #575757;
+}
+
+@media (min-width: 550px) {
+    .footer-content>h2 {
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
+}
+
+@media (min-width: 650px) {
+    .footer-background {
+        transform: scale(0.6) translateX(+150px);
+    }
+}
+
+@media (min-width: 1800px) {
+    .footer-background {
+        transform: scale(0.6) translateX(+2050px);
+    }
 }
