Add contact-me background for mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,7 @@
 @import url('about-me-section.styles.css');
 @import url('projects-section.styles.css');
 @import url('footer-section.styles.css');
+@import url('contact-me-page.styles.css');
 @import url('utils.styles.css');
 
 /*Open Sans*/
