--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@
 /*Oldenburg*/
 @import url('https://fonts.googleapis.com/css2?family=Oldenburg&display=swap');
 /*Inter*/
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@600;700;800&display=swap');
 
 :root {
     --orange-light: #F6980B;
