--- a/styles/contact-me-page.styles.css
+++ b/styles/contact-me-page.styles.css
@@ -11,7 +11,7 @@
     --contact-me-form-placeholder-size: 1.25rem;
 
     --contact-me-margin-bottom: 1.35rem;
-
+    --contact-me-content-top-offset: 2rem;
 }
 
 .contact-me-page {
@@ -37,12 +37,18 @@
     z-index: 1;
     align-items: center;
     font-family: 'Inter', sans-serif;
+    margin-top: var(--contact-me-content-top-offset);
 }
 
 .contact-me-form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+}
+
+.contact-me-form>.input-wrapper{
+    width: 100%;
 }
 
 .contact-me-content h1 {
@@ -57,13 +63,13 @@
 }
 
 .contact-me-form input {
-    width: 80vw;
+    width: 100%;
     margin-bottom: 1.35rem;
     height: var(--contact-me-form-input-height);
 }
 
 .contact-me-form textarea {
-    width: 80vw;
+    width: 100%;
     height: var(--contact-me-form-textarea-height);
     margin-bottom: var(--contact-me-margin-bottom);
     resize: none;
@@ -164,4 +170,17 @@
 .contact-page-shadow path {
     transform: translate(10px, 15px);
     fill: url(#contact-page-shadow-gradient);
+}
+
+@media (min-width: 700px){
+    .contact-me-content form {
+        width: 22.5rem;
+    }
+    .contact-me-content h1{
+        font-size: 4.75rem;
+    }
+    :root{
+        --contact-me-form-input-height: 2.25rem;
+        --contact-me-form-textarea-height: 6.5rem;
+    }
 }
