--- a/styles/contact-me-page.styles.css
+++ b/styles/contact-me-page.styles.css
@@ -21,6 +21,10 @@
     place-items: center;
 }
 
+.contact-me-page.desktop {
+    display: none;
+}
+
 .contact-me-wrapper {
     width: 100%;
     height: 100%;
@@ -47,7 +51,7 @@
     width: 100%;
 }
 
-.contact-me-form>.input-wrapper{
+.contact-me-form>.input-wrapper {
     width: 100%;
 }
 
@@ -104,7 +108,7 @@
     font-size: calc(var(--contact-me-form-placeholder-size)*var(--shrink-factor));
 }
 
-.contact-me-content .g-recaptcha{
+.contact-me-content .g-recaptcha {
     margin-bottom: var(--contact-me-margin-bottom);
 }
 
@@ -130,6 +134,10 @@
     opacity: 0.6;
 }
 
+.contact-me-content button:disabled:hover {
+    box-shadow: none;
+}
+
 /*Gradient borders for input and textarea elements*/
 .contact-me-form input,
 .contact-me-form textarea {
@@ -149,6 +157,10 @@
 }
 
 /*Background svgs*/
+.contact-me-page svg {
+    overflow: visible;
+}
+
 .contact-page-background,
 .contact-page-foreground,
 .contact-page-shadow {
@@ -172,15 +184,28 @@
     fill: url(#contact-page-shadow-gradient);
 }
 
-@media (min-width: 700px){
+@media (min-width: 700px) {
     .contact-me-content form {
         width: 22.5rem;
     }
-    .contact-me-content h1{
+
+    .contact-me-content h1 {
         font-size: 4.75rem;
     }
-    :root{
+
+    :root {
         --contact-me-form-input-height: 2.25rem;
         --contact-me-form-textarea-height: 6.5rem;
+    }
+}
+
+/*Desktop view*/
+@media (min-width: 1000px) {
+    .contact-me-page.desktop {
+        display: grid;
+    }
+
+    .contact-me-page.mobile {
+        display: none;
     }
 }
