--- a/styles/contact-me-page.styles.css
+++ b/styles/contact-me-page.styles.css
@@ -40,6 +40,7 @@ body.darkmode {
     height: 100vh;
     display: grid;
     place-items: center;
+    background-color: black;
 }
 
 .contact-me-page.desktop {
@@ -50,10 +51,10 @@ body.darkmode {
     width: 100%;
     height: 100%;
     position: relative;
-    background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
+    max-width: 1920px;
 }
 
 .contact-me-content {
@@ -278,6 +279,29 @@ input, textarea{
     display: inherit;
 }
 
+/*Desktop small blolbs*/
+.contact-page-middle-blob{
+    position:absolute;
+    right: 7%;
+    bottom: 2.5%;
+    width: 4em;
+    height: 4em;
+}
+
+.contact-page-little-blob{
+    position:absolute;
+    right: 12.5%;
+    bottom: 7%;
+    width: 6em;
+    height: 6em;
+}
+
+.contact-page-middle-blob path,
+.contact-page-little-blob path{
+    fill: var(--contact-me-form-background);
+}
+
+
 /*Desktop media queries*/
 @media (min-width: 1000px) {
     .contact-me-content form {
@@ -313,6 +337,16 @@ input, textarea{
         --contact-me-label-shrink-factor: 0.8;
         --contact-me-label-move-factor: 2.0;
         --contact-me-form-input-margin: 1.5rem;
+    }
+
+    .contact-page-middle-blob{
+        right: 12.5%;
+        bottom: 4.5%;
+    }
+    
+    .contact-page-little-blob{
+        right: 19.5%;
+        bottom: 10%;
     }
 }
 
