--- a/styles/welcome-section.styles.css
+++ b/styles/welcome-section.styles.css
@@ -31,7 +31,7 @@
     color: var(--secondary-text-color);
 }
 
-.navbar-mobile-toggle {
+#navbar-mobile-toggle {
     background: none;
     border: none;
     font-size: 1em;
@@ -174,7 +174,7 @@
         display: flex;
     }
 
-    .navbar-mobile-toggle {
+    #navbar-mobile-toggle {
         display: none;
     }
 }
