--- a/styles/footer-section.styles.css
+++ b/styles/footer-section.styles.css
@@ -94,6 +94,8 @@ body.darkmode {
 .footer-background-text {
     font-size: 10rem;
     font-weight: 600;
+    stroke: transparent;
+    stroke-width: 0;
 }
 
 .footer-background>text {
