--- a/styles/mobile-menu.styles.css
+++ b/styles/mobile-menu.styles.css
@@ -1,18 +1,26 @@
 .mobile-menu {
-    display: grid;
+    display: none;
     align-items: center;
-    position: relative;
+    position: fixed;
     width: 100vw;
     height: 100vh;
+    top: 0;
+    left: 0;
     color: var(--primary-text-color);
+    z-index: 10;
+    background-color: var(--body-background);
 }
 
 .mobile-menu .close-menu {
+    cursor: pointer;
     position: absolute;
     top: 2.5rem;
     right: 2.5rem;
     font-size: 2.5rem;
     transition-duration: .75s;
+    background: none;
+    border: none;
+    color: var(--primary-text-color);
 }
 
 .mobile-menu .close-menu:hover,
@@ -47,15 +55,14 @@
     position: relative;
 }
 
-.mobile-menu .menu-items li:hover:not(:first-child),
-.mobile-menu .menu-items li:active:not(:first-child) {
+.mobile-menu li:hover:not(:first-child),
+.mobile-menu li:active:not(:first-child) {
     color: var(--orange-dark);
     transform: scale(1.2);
-    transition: transform 1s;
-    transition: font-size 1s;
+    transition: transform 0.3s ease-in-out;
 }
 
-.mobile-menu .menu-items li:not(:first-child):after {
+.mobile-menu li:not(:first-child):after {
     content: '';
     position: absolute;
     width: 100%;
@@ -65,11 +72,11 @@
     left: 0;
     background-color: var(--orange-dark);
     transform-origin: bottom left;
-    transition: transform 0.5s ease-out;
+    transition: transform 0.3s ease-in-out;
 }
 
-.mobile-menu .menu-items li:hover:not(:first-child):after,
-.mobile-menu .menu-items li:active:not(:first-child):after {
+.mobile-menu li:hover:not(:first-child):after,
+.mobile-menu li:active:not(:first-child):after {
     transform: scaleX(1);
     transform-origin: bottom left;
 }
