--- a/styles/mobile-menu.styles.css
+++ b/styles/mobile-menu.styles.css
@@ -7,7 +7,7 @@
     top: 0;
     left: 0;
     color: var(--primary-text-color);
-    z-index: 10;
+    z-index: 5;
     background-color: var(--body-background);
 }
 
@@ -20,7 +20,6 @@
     transition-duration: .75s;
     background: none;
     border: none;
-    color: var(--primary-text-color);
 }
 
 .mobile-menu .close-menu:hover,
@@ -33,7 +32,6 @@
 }
 
 .mobile-menu .menu-items {
-    justify-items: center;
     list-style: none;
     padding: 0;
     margin: 0;
@@ -49,17 +47,27 @@
     cursor: pointer;
 }
 
+.mobile-menu .menu-items a {
+    text-decoration: none;
+    color: var(--primary-text-color);
+}
+
+/*Center darkmode toggle*/
 .mobile-menu .menu-items li:first-child {
     display: grid;
     align-items: center;
     position: relative;
 }
 
-.mobile-menu li:hover:not(:first-child),
-.mobile-menu li:active:not(:first-child) {
-    color: var(--orange-dark);
+.mobile-menu li:hover,
+.mobile-menu li:active {
     transform: scale(1.2);
     transition: transform 0.3s ease-in-out;
+}
+
+.mobile-menu li:hover a,
+.mobile-menu li:active a {
+    color: var(--orange-dark);
 }
 
 .mobile-menu li:not(:first-child):after {
@@ -68,7 +76,7 @@
     width: 100%;
     transform: scaleX(0);
     height: 4px;
-    bottom: -0.15em;
+    bottom: -0.1em;
     left: 0;
     background-color: var(--orange-dark);
     transform-origin: bottom left;
