Add slide effect to footer background text

--- a/styles/footer-section.styles.css
+++ b/styles/footer-section.styles.css
@@ -98,7 +98,7 @@ body.darkmode {
     stroke-width: 0;
 }
 
-.footer-background>text {
+.footer-background-text {
     fill: var(--background-text);
 }
 
