--- a/styles/projects-section.styles.css
+++ b/styles/projects-section.styles.css
@@ -34,12 +34,15 @@ body.darkmode {
     flex-wrap: nowrap;
     overflow: hidden;
     padding: 0;
-    overscroll-behavior: none;
+    height: 100vh;
 }
 
 .project-wrapper {
     display: grid;
     place-items: center;
+    width: 100%;
+    height: 100%;
+    flex-shrink: 0;
 }
 
 .project {
@@ -66,9 +69,6 @@ body.darkmode {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.project:not(:first-child) {
     margin-top: 5rem;
 }
 
