--- a/styles/projects-section.styles.css
+++ b/styles/projects-section.styles.css
@@ -30,8 +30,6 @@ body.darkmode {
 
 .projects-container {
     margin-top: 2rem;
-    display:flex;
-    flex-wrap: nowrap;
     overflow: hidden;
     padding: 0;
     min-height: 100vh;
@@ -246,6 +244,11 @@ body.darkmode {
         width: auto;
         aspect-ratio: 1;
         margin-right: calc(-1.5*var(--project-image-offset));
+    }
+
+    .projects-container {
+        display: flex;
+        flex-wrap: nowrap;
     }
 }
 
